# capstone

./: .gitignore  CLAUDE.md  README.md  monitor.py  status.md  west.yml
firmware/: API_REFERENCE.md  ARCHITECTURE.md  CMakeLists.txt  Kconfig  build.sh  build_multi.sh  pm_static_xiao_ble.yml  prj.conf  sysbuild_dwm3001cdk.conf
firmware/boards/: decawave_dwm3001cdk.conf  decawave_dwm3001cdk.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  xiao_ble.conf  xiao_ble.overlay
firmware/src/: device_config.c  device_config.h  leds.h  main.c  thread_coap.c  thread_coap.h  uci.c  uci.h  uci_coap.c  uci_uart.c  uwb_manager.c  uwb_manager.h
firmware/sysbuild/: mcuboot.conf
firmware/sysbuild/mcuboot_dwm3001cdk/: serial_recovery.conf  serial_recovery.overlay
firmware/sysbuild/mcuboot_xiao_ble/: mcuboot.conf  partitions.overlay
scripts/: thread_dongle_setup.sh
server/: coap_receiver.py  main.py
tools/: dashboard.py  monitor.py  setup_host_tools.sh
tools/otbr/: docker-compose.yml  otbr-env.list
tools/scripts/: _otbr_nspawn_inner.sh  ot-ctl  ota_update.sh  otbr_setup.sh  test_firmware.py  test_otbr_nspawn.sh  thread_dongle_setup.sh  uwb_tool.py
tools/server/: coap_server.py  database.py  main.py  requirements.txt  thread_setup.sh
